--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,10 @@ h3 {
   ul.timeline {
     padding-top: 17%;
   }
+
+  .timeline h4 {
+    font-size: 1.4rem;
+  }
 }
 
 @media only screen and (max-width: 576px) {
