--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ h3 {
 }
 
 @media only screen and (max-width: 768px) {
-  h1, button {
+  h1, button, h3 {
     font-size: 1.4rem;
     line-height: 1.4rem;
     margin: 2%;
@@ -313,13 +313,17 @@ h3 {
 }
 
 @media only screen and (max-width: 576px) {
-  h1, button {
-    font-size: 1.2rem;
-    line-height: 1.2rem;
+  h1, button, h3 {
+    font-size: 1rem;
+    line-height: 1rem;
     margin: 1%;
   }
 
   button {
     height: 3rem;
+  }
+
+  p {
+    font-size: 1rem;
   }
 }
