--- a/css/styles.css
+++ b/css/styles.css
@@ -313,17 +313,28 @@ h3 {
 }
 
 @media only screen and (max-width: 576px) {
-  h1, button, h3 {
+  button, h3 {
     font-size: 1rem;
     line-height: 1.1rem;
     margin: 1%;
   }
 
   button {
-    height: 3rem;
+    height: 3.5rem;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+    line-height: 1.1rem;
+    margin: 1%;
+  }
+
+  h4 {
+    font-size: 1.2rem;
   }
 
   p {
     font-size: 1rem;
   }
+
 }
