--- a/other/math/css/styles.css
+++ b/other/math/css/styles.css
@@ -34,3 +34,11 @@ h4 {
   color: darkblue;
   font-size: 18px;
 }
+
+.mc-choices ol {
+  margin-top: 0.5%;
+  color: darkblue;
+  font-size: 16px;
+  columns: 3;
+  list-style-position: inside;
+}
